kubernetes/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: juntamedic-backend
  namespace: $NAMESPACE
spec:
  ports:
  - name: main
    port: 9016
    targetPort: 9016
  selector:
    app: juntamedic-backend
