kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juntamedic-backend
  namespace: $NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: '300m'
spec:
  tls:
    - hosts:
      - $INGRESS_URL
      secretName: tls-secret
  rules:
    - host: $INGRESS_URL
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juntamedic-backend
                port:
                  number: 9016
